syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mlorenzo.models";

message TransferRequest {
  int32 from_account = 1;
  int32 to_account = 2;
  int32 amount = 3;
}

message Account {
  int32 account_number = 1;
  int32 amount = 2;
}

message TransferResponse {
  repeated Account accounts = 1;
  TransferStatus status = 2;
}

enum TransferStatus {
  FAILED = 0;
  SUCCESS = 1;
}

service TransferService {
  // Bidirectional streaming
  rpc transfer(stream TransferRequest) returns(stream TransferResponse);
}